[package]
name = "kvs"
version = "0.1.0"
authors = ["ROki1988 <roki.swindler@gmail.com>"]
description = "Key Value Store"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
failure = "0.1.8"
serde = "1.0.110"
serde_json = "1.0.53"
[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"