[package]
name = "kvs"
version = "0.1.0"
authors = ["ROki1988 <roki.swindler@gmail.com>"]
description = "Key Value Store"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "engine_bench"
harness = false

[dependencies]
clap = "2.33.1"
failure = "0.1.8"
serde = "1.0.110"
serde_json = "1.0.53"
slog = "2.5.2"
slog-term = "2.5.0"
slog-json = "2.3.0"
slog-async = "2.5.0"
sled = "0.31.0"
bstr = "0.2.13"
strum = "0.18.0"
strum_macros = "0.18.0"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.2.11"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"